--- a/4-Advance-JS/403-event-listeners/AdvanceJS-403-03/index.html
+++ b/4-Advance-JS/403-event-listeners/AdvanceJS-403-03/index.html
@@ -4,9 +4,64 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Tip Counter</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    Start your code here
+    <div class="content">
+      <h1> Charles' Tip Calculator </h1>
+      <div class="calculator">
+        <form>
+          <label>
+            How much was your bill?<br>
+            $ <input class="bill" type="text"> <br>
+          </label>
+          <label>
+            How was your service?<br>
+            <select>
+              <option value="0">-- Choose an option --</option>
+              <option value="0.3">30% - Outstanding</option>
+              <option value="0.2">20% - Good</option>
+              <option value="0.15">15% - It was okay</option>
+              <option value="0.1">10% - Bad</option>
+              <option value="0.05">5% - Terrible</option>
+            </select>
+          </label>
+          <br>
+          <label>
+            How many people are sharing the bill?<br>
+            <input type="text"> people
+          </label><br>
+          <button type="button"> Calculate!</button>
+        </form>
+      </div>
+      <div class="total-tip">
+      </div>
+    </div>
+    <script>
+      let button = document.getElementsByTagName('button')[0];
+      let billInput = document.getElementsByTagName('input')[0];
+      let serviceInput = document.getElementsByTagName('select')[0];
+      let peopleInput = document.getElementsByTagName('input')[1];
+      button.addEventListener('click', () => {
+        let bill = billInput.value;
+        let service = serviceInput.value;
+        let people = peopleInput.value;
+        if (bill === "" || service == 0 || people === "") {
+          alert("please enter some values");
+          return;
+        }
+        var total = (bill * service) / people;
+        total = Math.round(total * 100) / 100;
+        total = total.toFixed(2);
+        totalPrice(total);
+      })
+      function totalPrice(total) {
+        let totalTip = document.getElementsByClassName('total-tip')[0];
+        totalTip.innerHTML = `<p> TIP AMOUNT </p>
+      <h2> $ ${total}</h2>
+      <p> each </p>`
+      }
+    </script>
   </body>
 </html>
