--- a/4-Advance-JS/404-Mini-Project-Solar System/AdvanceJS-404-01/index.html
+++ b/4-Advance-JS/404-Mini-Project-Solar System/AdvanceJS-404-01/index.html
@@ -4,9 +4,110 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Solar System</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    Start your code here
+    <header>
+      <h1> Calculate a weight of an object on a planet</h1>
+      <div class="input">
+        <input type="text" placeholder="Mass in kilogram">
+        <select id="mySelect" onchange="myFunction()">
+          <option value=""> --select planet-- </option>
+          <option value="3.7"> MERCURY </option>
+          <option value="8.87"> VENUS </option>
+          <option value="9.8"> EARTH </option>
+          <option value="1.62"> MOON </option>
+          <option value="3.7"> MARS </option>
+          <option value="24.79"> JUPITER </option>
+          <option value="10.44"> SATURN </option>
+          <option value="8.87"> URANUS </option>
+          <option value="11.15"> NEPTUNE </option>
+          <option value="0.62"> PLUTO </option>
+        </select>
+        <button>Calculate weight</button>
+    
+      </div>
+    </header>
+    <div class="planet">
+      <div class="image">
+        <img src="ProjectImage/earth.png">
+      </div>
+    </div>
+    <script>
+      let button = document.getElementsByTagName('button')[0];
+      let planet = document.getElementsByClassName('planet')[0];
+      let body = document.getElementsByTagName('body')[0];
+      let numberInput = document.getElementsByTagName('input')[0];
+      let planetInput = document.getElementsByTagName('select')[0];
+      let options = document.getElementsByTagName('option');
+      let planets = {
+        "MERCURY": "ProjectImage/mercury.png",
+        "VENUS": "ProjectImage/venus.png",
+        "EARTH": "ProjectImage/earth.png",
+        "MOON": "ProjectImage/moon.png",
+        "MARS": "ProjectImage/mars.png",
+        "JUPITER": "ProjectImage/jupiter.png",
+        "SATURN": "ProjectImage/saturn.png",
+        "URANUS": "ProjectImage/uranus.png",
+        "NEPTUNE": "ProjectImage/neptune.png",
+        "PLUTO": "ProjectImage/pluto.png"
+      }
+      let name;
+      let image;
+      function myFunction() {
+        var x = document.getElementById("mySelect");
+        var i = x.selectedIndex;
+        name = x.options[i].text;
+        image = planets[name];
+      }
+      button.addEventListener('click', () => {
+        planet.remove();
+        let number = numberInput.value;
+        let planetName = planetInput.value;
+        if (number === "") {
+          let smallBox = document.createElement('div');
+          smallBox.setAttribute('class', 'smallBox')
+          smallBox.innerHTML = `<div class="miniBox">
+            <p> Mass is required </p> </div>`
+          body.appendChild(smallBox);
+          button.addEventListener('mousedown', () => {
+            let del = document.getElementsByClassName('smallBox')[0];
+            del.remove();
+          })
+        }else if(planetName == ""){
+          let smallBox = document.createElement('div');
+          smallBox.setAttribute('id', 'smallBox')
+          smallBox.innerHTML = `<div class="miniBox">
+                    <p> You did not choose a planet yet </p> 
+                    </div>`
+          body.appendChild(smallBox);
+          button.addEventListener('mousedown', () => {
+            let delt = document.getElementById('smallBox');
+            delt.remove();
+          })
+        }else{
+          let total = number * planetName;
+          total = Math.round(total * 100) / 100;
+          total = total.toFixed(2);
+          let box = document.createElement('div');
+          box.setAttribute('class', 'box');
+          body.appendChild(box);
+          box.innerHTML = `<div class="image">
+            <img src="${image}">
+          </div>
+          <div class="weight">
+            <h2> The weight of the object on <span> ${name} </span></h2>
+              <div class="circle">
+                <p> ${total} N </p>
+              </div>
+          </div>`
+          button.addEventListener('mouseup', () => {
+            let del = document.getElementsByClassName('box')[0];
+            del.remove();
+          }) 
+        }
+        })
+    </script>
   </body>
 </html>
