--- a/4-Advance-JS/407-Emoji-search/AdvanceJS-407-01/index.html
+++ b/4-Advance-JS/407-Emoji-search/AdvanceJS-407-01/index.html
@@ -4,9 +4,53 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Emojee - Emoji 🔍 Application</title>
+  <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    Start your code here
+    <div class="main-container">
+      <h1>Emojee - Emoji 🔍 Application</h1>
+      <hr>
+      <input type="text" id="input" placeholder="Emojee Search">
+      <button>Search</button>
+      <div id="emoji-box">
+      </div>
+    </div>
+    <script src="emojiList.js"></script>
+    <script>
+      let input = document.getElementById('input');
+      let emojiBox = document.getElementById('emoji-box');
+      let box = document.getElementsByClassName('box')[0];
+      init();
+      function init() {
+        renderEmojis();
+        input.addEventListener('keyup', renderEmojis)
+      }
+      function renderEmojis() {
+        let html = "";
+        let emojiListCopy = [...emojiList];
+        let inputValue = input.value;
+        emojiListCopy = emojiListCopy.filter((emojiList) => {
+          let flag = false;
+          for (let i = 0; i < emojiList.tags.length; i++) {
+            if (emojiList.tags[i].toUpperCase().startsWith(inputValue.toUpperCase())) {
+              flag = true
+            }
+          }
+        if(emojiList.aliases[0].toUpperCase().includes(inputValue.toUpperCase())){
+            flag = true
+          }
+          if(emojiList.description.toUpperCase().includes(inputValue.toUpperCase())) {
+            flag = true
+          }
+          return flag;
+        })
+        for (let i = 0; i < emojiListCopy.length; i++) {
+          let newAliases = emojiListCopy[i].aliases[0].replaceAll("_", " ");
+          html += `<div class="box"> <div class="emojiName"><span style="font-size:300%">${emojiListCopy[i].emoji}</span> <span style="font-size:150%; text-transform: capitalize;">${newAliases}</span></div> <div class="desc"><p>${emojiListCopy[i].description}</p></div> </div>`
+        }
+        emojiBox.innerHTML = html;
+      }
+    </script>
   </body>
 </html>
