--- a/4-Advance-JS/409-form-validation/AdvanceJS-409-01/index.html
+++ b/4-Advance-JS/409-form-validation/AdvanceJS-409-01/index.html
@@ -4,9 +4,148 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Form validation</title>
+    <link rel="stylesheet" href="./style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
   </head>
   <body>
-    Start your code here
+    <h1>Validating Web Form</h1>
+      <form action="#">
+        <div class="info">
+          <h3>First Name</h3>
+          <input type="text" id="firstNameInput">
+          <p class="error">First name must be alphanumeric and contain 3-16 characters</p>
+        </div>
+        <div class="info">
+          <h3>Last Name</h3>
+          <input type="text" id="lastNameInput">
+          <p class="error">Last name must be alphanumeric and contain 3-16 characters</p>
+        </div>
+        <div class="info">
+          <h3>Email</h3>
+          <input type="email" id="emailInput">
+          <p class="error">Email must be valid address, e.g. example@example.com</p>
+        </div>
+        <div class="info">
+          <h3>Password</h3>
+          <input type="password" id="passInput">
+          <p class="error">Password must be alphanumeric (@, _ and - are also allowed) and between 6-20 character</p>
+        </div>
+        <div class="info">
+          <h3>Phone Number</h3>
+          <input type="number" id="telInput">
+          <p class="error">A valid phone number and should be 10 numbers</p>
+        </div>
+        <div class="info">
+          <h3>Your Bio</h3>
+          <input type="text" id="bioInput">
+          <p class="error">Bio must contain only lowercase letters, underscores, hyphens and 8-50 characters</p>
+        </div>
+        <button id="submitBtn">Submit</button>
+      </form>
+    <script>
+      const firstNameInput = document.getElementById('firstNameInput');
+      const lastNameInput = document.getElementById('lastNameInput');
+      const emailInput = document.getElementById('emailInput');
+      const passInput = document.getElementById('passInput');
+      const telInput = document.getElementById('telInput');
+      const bioInput = document.getElementById('bioInput');
+      const submitBtn = document.getElementById('submitBtn');
+      const error = document.getElementsByClassName('error');
+
+      init();
+
+      function init() {
+          firstNameInput.addEventListener('blur', validateFirstName);
+          lastNameInput.addEventListener('blur', validateLastName);
+          emailInput.addEventListener('blur', validateEmail);
+          passInput.addEventListener('blur', validatePass);
+          telInput.addEventListener('blur',validatePhoneNumber);
+          bioInput.addEventListener('blur', validateBio);
+      }
+
+      function validateFirstName() {
+          const re = /^[a-zA-Z]{3,16}$/;
+          if(re.test(firstNameInput.value)){
+              error[0].style.display = 'none';
+              firstNameInput.style.borderColor = '#66d8a1'
+          }
+          else{
+              error[0].style.display = 'block';
+              firstNameInput.style.borderColor = 'black'
+          }
+      }
+
+      function validateLastName() {
+          const re = /^[a-zA-Z]{3,16}$/;
+          if(re.test(lastNameInput.value)){
+              error[1].style.display = 'none';
+              lastNameInput.style.borderColor = '#66d8a1'
+          }
+          else{
+              error[1].style.display = 'block';
+              lastNameInput.style.borderColor = 'black'
+          }
+      }
+
+      function validateEmail() {
+          const re = /^([a-z0-9_\.\-]+)@([a-z0-9.\-\_]+)\.([a-z0-9]{2,5}$)/
+          if(re.test(emailInput.value)){
+              error[2].style.display = 'none';
+              emailInput.style.borderColor = '#66d8a1'
+          }
+          else{
+              error[2].style.display = 'block';
+              emailInput.style.borderColor = 'black'
+          }
+      }
+
+      function validatePass() {
+          const re = /^[a-zA-z0-9@\_\-]{6,20}$/
+          if(re.test(passInput.value)){
+              error[3].style.display = 'none';
+              passInput.style.borderColor = '#66d8a1'
+          }
+          else{
+              error[3].style.display = 'block';
+              passInput.style.borderColor = 'black'
+          }
+      }
+
+      function validatePhoneNumber() {
+          const re = /^[0-9]{10}$/;
+          if(re.test(telInput.value)){
+              error[4].style.display = 'none';
+              telInput.style.borderColor = '#66d8a1'
+          }
+          else{
+              error[4].style.display = 'block';
+              telInput.style.borderColor = 'black'
+          }
+      }
+
+      function validateBio() {
+          const re = /^[a-z0-9_\-]{8,50}$/;
+          if(re.test(bioInput.value)){
+              error[5].style.display = 'none';
+              bioInput.style.borderColor = '#66d8a1'
+              changeBtn();
+          }
+          else{
+              error[5].style.display = 'block';
+              bioInput.style.borderColor = 'black'
+          }
+      }
+
+      function changeBtn() {
+          for(let i = 0; i < 6; i++) {
+              console.log(error[i].style.display)
+              if(error[i].style.display === 'none'){
+                  submitBtn.style.backgroundColor = '#66d8a1';
+                  submitBtn.style.border = 'none';
+              }
+          }
+      }
+    </script>
   </body>
 </html>
