--- a/4-Advance-JS/410-Projects/AdvanceJS-410-01/index.html
+++ b/4-Advance-JS/410-Projects/AdvanceJS-410-01/index.html
@@ -4,9 +4,75 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Github Finder</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
   </head>
   <body>
-    Start your code here
+    <div class="main-container">
+      <div class="app_heading">
+          <i class="fa-brands fa-github" style="font-size: 30px;"></i>
+          <h4>Github Finder</h4>
+      </div>
+      <div class="clear_container">
+          <p>Lets Talk Someone on Github</p>
+          <button id="clear_button">CLEAR</button>
+      </div>
+      <div class="input_container">
+          <input type="text" id="input">
+          <button style="height: 37px; width: 85px;" id="go_button">GO</button>
+      </div>
+
+      <div class="action_container"></div>
+    </div>
+    <script>
+      const input = document.getElementById("input");
+      const go_button = document.getElementById("go_button");
+      const clear_button = document.getElementById("clear_button");
+      const action_container = document.getElementsByClassName("action_container")[0];
+        
+      init();
+
+      function init() {
+        go_button.addEventListener("click", getuser);
+        input.addEventListener("keyup",(e)=>{
+          if(e.key === 'Enter'){
+            getuser();
+          }
+        })
+        clear_button.addEventListener("click", clearfunction);
+      }
+
+      async function getuser() {
+        let input_value = input.value;
+        const streamResponse = await fetch(`https://api.github.com/search/users${input_value ? `?q=${input_value}` : ''}`)
+        const textBody = await streamResponse.text();
+        const jsonData = JSON.parse(textBody);
+        renderuser(jsonData.items);
+      }
+
+      function renderuser(userData) {
+        let html = '';
+        for (let i = 0; i < userData.length; i++) {
+          const profilePictureUrl = userData[i]['avatar_url']
+          const profileUrl = userData[i]['html_url']
+          const username = userData[i]['login']
+          html += `<div class="card">
+            <div class="icon">
+                <img src="${profilePictureUrl}" alt="" id="img">
+            </div>
+            <div class="name_container">
+                <h3 id="gitid">${username}</h3>
+                <a href="${profileUrl}" id="gitname">visit profile</a>
+              </div>
+            </div>`
+        }
+        action_container.innerHTML = html;
+      }
+      
+      function clearfunction(){
+        action_container.innerHTML = "";
+      }
+    </script>
   </body>
 </html>
