--- a/4-Advance-JS/410-Projects/AdvanceJS-410-03/index.html
+++ b/4-Advance-JS/410-Projects/AdvanceJS-410-03/index.html
@@ -4,9 +4,41 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Meal Finder</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    Start your code here
+    <h1 id="main_heading">Meal Finder</h1>
+    <h3 id="sub_heading">Find the perfect meal to dine upon</h3>
+    <input type="text" id="user_input">
+    <div class="image_container"></div>
+    <script>
+      const input = document.getElementById("user_input");
+      const image_container = document.getElementsByClassName("image_container")[0];
+
+      init();
+
+      function init(){
+        fetchmeal();
+        input.addEventListener("keyup", fetchmeal);
+        input.addEventListener("keyup", (event)=>{
+         if(event.key === "Enter"){
+            fetchmeal();
+         }
+        })
+      }
+
+      async function fetchmeal(){
+        const input_value = input.value;
+        const streamResponse = await fetch(`https://www.themealdb.com/api/json/v1/1/search.php?s=${input_value}`);
+        const textBody = await streamResponse.text();
+        const jsonData = JSON.parse(textBody);
+        let html = '';
+        for(let i=0; i < jsonData.meals.length; i++){
+         html += `<img src="${jsonData.meals[i].strMealThumb}" alt="" id="img">`
+        }
+        image_container.innerHTML = html;
+      }
+    </script>
   </body>
 </html>
